--- a/tugas-bootstrap/index.html
+++ b/tugas-bootstrap/index.html
@@ -3,7 +3,7 @@
 		<title></title>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-	<link rel="stylesheet" href="assets/css/style.css">
+	<link rel="stylesheet" href="./assets/css/style.css">
 	</head>
 	<body style="overflow-x: hidden;">
 				<nav class="navbar navbar-expand-lg bg-body-light">
@@ -45,8 +45,8 @@
 							 <a class="nav-link mb-2 ms-2" href="#">Sign In</a>
 						  </li>
 						</ul>
-						<a class="navbar-brand"><img src="assets/user.svg" class="mb-2 ms-1"></a>
-						<a class="navbar-brand"><img src="assets/belanja.svg" class="mb-2"></a>
+						<a class="navbar-brand"><img src="./assets/user.svg" class="mb-2 ms-1"></a>
+						<a class="navbar-brand"><img src="./assets/belanja.svg" class="mb-2"></a>
 					 </div>
 				  </div>
 				</nav>
@@ -73,7 +73,7 @@
 		<div class="row ">
 			<div class="col-lg-4 col-md-6 mb-0 mb-sm-3">
 				<div class="card text-center">
-					<img src="assets/card-1.png" alt="" class="">
+					<img src="./assets/card-1.png" alt="" class="">
 					<div class="card-body">
 						<h2 class="card-title text-center">Happy Holidays<br>
 							Gift Card</h2>
@@ -87,7 +87,7 @@
 			</div>
 			<div class="col-lg-4 col-md-6 mb-0 mb-sm-3">
 				<div class="card text-center">
-					<img src="assets/card-2.png" alt="" class="">
+					<img src="./assets/card-2.png" alt="" class="">
 					<div class="card-body">
 						<h2 class="card-title text-center">Happy Holidays<br>
 							Gift Card</h2>
@@ -101,7 +101,7 @@
 			</div>
 			<div class="col-lg-4 col-md-6">
 				<div class="card mb-0 mb-sm-3 text-center">
-					<img src="assets/cars-3.png" alt="" class="">
+					<img src="./assets/cars-3.png" alt="" class="">
 					<div class="card-body">
 						<h2 class="card-title text-center">Happy Holidays<br>
 							Gift Card</h2>
@@ -127,7 +127,7 @@
 					Facilisis id tellus consectetur feugiat et. Purus, consequat aliquet mauris id a dui pretium, suspendisse mauris. Pellentesque erat enim platea malesuada risus lacus nibh.</p>
 				</div>
 				<div class="w-100 w-lg-25 d-none d-lg-flex justify-content-center justify-content-lg-end align-items-center mt-3 mt-lg-0" style="margin-right: -30px;">
-					<img src="assets/bulat.svg" alt="" class="">
+					<img src="./assets/bulat.svg" alt="" class="">
 				</div>
 		</div>
 
@@ -141,7 +141,7 @@
 			<div class="row mt-4">
 				<div class="col-lg-3 col-sm-6">
 					<div class="card mb-2 mb-lg-0">
-						<img src="assets/cards-1.png" alt="">
+						<img src="./assets/cards-1.png" alt="">
 						<h5 class="ms-2 text-center text-lg-start">Santa at Night</h5>
 						<p class="ms-2 text-center text-lg-start">$25 - $ 250</p>
 						<button class="btn text-white position-absolute bottom-0 end-0" style="background-color: #B248AD;">Buy Now</button>
@@ -149,7 +149,7 @@
 				</div>
 				<div class="col-lg-3 col-sm-6">
 					<div class="card mb-2 mb-lg-0">
-						<img src="assets/cards-2.png" alt="">
+						<img src="./assets/cards-2.png" alt="">
 						<h5 class="ms-2 text-center text-lg-start">Santa at Night</h5>
 						<p class="ms-2 text-center text-lg-start">$25 - $ 250</p>
 						<button class="btn text-white position-absolute bottom-0 end-0" style="background-color: #B248AD;">Buy Now</button>
@@ -157,7 +157,7 @@
 				</div>
 				<div class="col-lg-3 col-sm-6">
 					<div class="card mb-2 mb-lg-0">
-						<img src="assets/cards-3.png" alt="">
+						<img src="./assets/cards-3.png" alt="">
 						<h5 class="ms-2 text-center text-lg-start">Santa at Night</h5>
 						<p class="ms-2 text-center text-lg-start">$25 - $ 250</p>
 						<button class="btn text-white position-absolute bottom-0 end-0" style="background-color: #B248AD;">Buy Now</button>
@@ -165,7 +165,7 @@
 				</div>
 				<div class="col-lg-3 col-sm-6">
 					<div class="card mb-2 mb-lg-0">
-						<img src="assets/cards-1.png" alt="">
+						<img src="./assets/cards-1.png" alt="">
 						<h5 class="ms-2 text-center text-lg-start">Santa at Night</h5>
 						<p class="ms-2 text-center text-lg-start">$25 - $ 250</p>
 						<button class="btn text-white position-absolute bottom-0 end-0" style="background-color: #B248AD;">Buy Now</button>
@@ -175,7 +175,7 @@
 			<div class="row mt-2">
 				<div class="col-lg-3 col-sm-6">
 					<div class="card mb-2 mb-lg-0">
-						<img src="assets/cards-3.png" alt="">
+						<img src="./assets/cards-3.png" alt="">
 						<h5 class="ms-2 text-center text-lg-start">Santa at Night</h5>
 						<p class="ms-2 text-center text-lg-start">$25 - $ 250</p>
 						<button class="btn text-white position-absolute bottom-0 end-0" style="background-color: #B248AD;">Buy Now</button>
@@ -183,7 +183,7 @@
 				</div>
 				<div class="col-lg-3 col-sm-6">
 					<div class="card mb-2 mb-lg-0">
-						<img src="assets/cards-2.png" alt="">
+						<img src="./assets/cards-2.png" alt="">
 						<h5 class="ms-2 text-center text-lg-start">Santa at Night</h5>
 						<p class="ms-2 text-center text-lg-start">$25 - $ 250</p>
 						<button class="btn text-white position-absolute bottom-0 end-0" style="background-color: #B248AD;">Buy Now</button>
@@ -191,7 +191,7 @@
 				</div>
 				<div class="col-lg-3 col-sm-6">
 					<div class="card mb-2 mb-lg-0">
-						<img src="assets/cards-1.png" alt="">
+						<img src="./assets/cards-1.png" alt="">
 						<h5 class="ms-2 text-center text-lg-start">Santa at Night</h5>
 						<p class="ms-2 text-center text-lg-start">$25 - $ 250</p>
 						<button class="btn text-white position-absolute bottom-0 end-0" style="background-color: #B248AD;">Buy Now</button>
@@ -199,7 +199,7 @@
 				</div>
 				<div class="col-lg-3 col-sm-6">
 					<div class="card mb-2 mb-lg-0">
-						<img src="assets/cards-2.png" alt="">
+						<img src="./assets/cards-2.png" alt="">
 						<h5 class="ms-2 text-center text-lg-start">Santa at Night</h5>
 						<p class="ms-2 text-center text-lg-start">$25 - $ 250</p>
 						<button class="btn text-white position-absolute bottom-0 end-0" style="background-color: #B248AD;">Buy Now</button>
@@ -224,7 +224,7 @@
 			<div class="row mt-4">
 				<div class="col-lg-3 col-sm-6">
 					<div class="card mb-2 mb-lg-0">
-						<img src="assets/cards-1.png" alt="">
+						<img src="./assets/cards-1.png" alt="">
 						<h5 class="ms-2 text-center text-lg-start">Santa at Night</h5>
 						<p class="ms-2 text-center text-lg-start">$25 - $ 250</p>
 						<button class="btn text-white position-absolute bottom-0 end-0" style="background-color: #B248AD;">Buy Now</button>
@@ -232,7 +232,7 @@
 				</div>
 				<div class="col-lg-3 col-sm-6">
 					<div class="card mb-2 mb-lg-0">
-						<img src="assets/cards-2.png" alt="">
+						<img src="./assets/cards-2.png" alt="">
 						<h5 class="ms-2 text-center text-lg-start">Santa at Night</h5>
 						<p class="ms-2 text-center text-lg-start">$25 - $ 250</p>
 						<button class="btn text-white position-absolute bottom-0 end-0" style="background-color: #B248AD;">Buy Now</button>
@@ -248,7 +248,7 @@
 				</div>
 				<div class="col-lg-3 col-sm-6">
 					<div class="card">
-						<img src="assets/cards-1.png" alt="">
+						<img src="./assets/cards-1.png" alt="">
 						<h5 class="ms-2 text-center text-lg-start">Santa at Night</h5>
 						<p class="ms-2 text-center text-lg-start">$25 - $ 250</p>
 						<button class="btn text-white position-absolute bottom-0 end-0" style="background-color: #B248AD;">Buy Now</button>
@@ -258,7 +258,7 @@
 			<div class="row mt-2">
 				<div class="col-lg-3 col-sm-6">
 					<div class="card mb-2 mb-lg-0">
-						<img src="assets/cards-3.png" alt="">
+						<img src="./assets/cards-3.png" alt="">
 						<h5 class="ms-2 text-center text-lg-start">Santa at Night</h5>
 						<p class="ms-2 text-center text-lg-start">$25 - $ 250</p>
 						<button class="btn text-white position-absolute bottom-0 end-0" style="background-color: #B248AD;">Buy Now</button>
@@ -266,7 +266,7 @@
 				</div>
 				<div class="col-lg-3 col-sm-6">
 					<div class="card mb-2 mb-lg-0">
-						<img src="assets/cards-2.png" alt="">
+						<img src="./assets/cards-2.png" alt="">
 						<h5 class="ms-2 text-center text-lg-start">Santa at Night</h5>
 						<p class="ms-2 text-center text-lg-start">$25 - $ 250</p>
 						<button class="btn text-white position-absolute bottom-0 end-0" style="background-color: #B248AD;">Buy Now</button>
@@ -274,7 +274,7 @@
 				</div>
 				<div class="col-lg-3 col-sm-6">
 					<div class="card mb-2 mb-lg-0">
-						<img src="assets/cards-1.png" alt="">
+						<img src="./assets/cards-1.png" alt="">
 						<h5 class="ms-2 text-center text-lg-start">Santa at Night</h5>
 						<p class="ms-2 text-center text-lg-start">$25 - $ 250</p>
 						<button class="btn text-white position-absolute bottom-0 end-0" style="background-color: #B248AD;">Buy Now</button>
@@ -282,7 +282,7 @@
 				</div>
 				<div class="col-lg-3 col-sm-6">
 					<div class="card mb-2 mb-lg-0">
-						<img src="assets/cards-2.png" alt="">
+						<img src="./assets/cards-2.png" alt="">
 						<h5 class="ms-2 text-center text-lg-start">Santa at Night</h5>
 						<p class="ms-2 text-center text-lg-start">$25 - $ 250</p>
 						<button class="btn text-white position-absolute bottom-0 end-0" style="background-color: #B248AD;">Buy Now</button>
@@ -299,7 +299,7 @@
 
 		<div class="container-fluid d-flex align-items-center justify-content-center w-auto flex-column py-lg-3 flex-lg-row mb-5 mt-5">
 			<div class="w-100 w-lg-25 d-none d-lg-flex justify-content-center justify-content-lg-end align-items-center mt-3 mt-lg-0" style="margin-right: -30px;">
-				<img src="assets/santa.png" alt="" class="">
+				<img src="./assets/santa.png" alt="" class="">
 			</div>
 			<div class="d-flex flex-column justify-content-center align-items-center align-items-lg-start w-100 w-lg-50 ps-1 ms-0 ps-lg-5 ms-lg-5 text-center text-lg-start">
 				<span class="display-4">eGift Cards<br>
@@ -322,7 +322,7 @@
 			<div class="row mt-4">
 				<div class="col-lg-3 col-sm-6">
 					<div class="card mb-2 mb-lg-0">
-						<img src="assets/cards-1.png" alt="">
+						<img src="./assets/cards-1.png" alt="">
 						<h5 class="ms-2 text-center text-lg-start">Santa at Night</h5>
 						<p class="ms-2 text-center text-lg-start">$25 - $ 250</p>
 						<button class="btn text-white position-absolute bottom-0 end-0" style="background-color: #B248AD;">Buy Now</button>
@@ -330,7 +330,7 @@
 				</div>
 				<div class="col-lg-3 col-sm-6">
 					<div class="card mb-2 mb-lg-0">
-						<img src="assets/cards-2.png" alt="">
+						<img src="./assets/cards-2.png" alt="">
 						<h5 class="ms-2 text-center text-lg-start">Santa at Night</h5>
 						<p class="ms-2 text-center text-lg-start">$25 - $ 250</p>
 						<button class="btn text-white position-absolute bottom-0 end-0" style="background-color: #B248AD;">Buy Now</button>
@@ -338,7 +338,7 @@
 				</div>
 				<div class="col-lg-3 col-sm-6">
 					<div class="card mb-2 mb-lg-0">
-						<img src="assets/cards-3.png" alt="">
+						<img src="./assets/cards-3.png" alt="">
 						<h5 class="ms-2 text-center text-lg-start">Santa at Night</h5>
 						<p class="ms-2 text-center text-lg-start">$25 - $ 250</p>
 						<button class="btn text-white position-absolute bottom-0 end-0" style="background-color: #B248AD;">Buy Now</button>
@@ -346,7 +346,7 @@
 				</div>
 				<div class="col-lg-3 col-sm-6">
 					<div class="card">
-						<img src="assets/cards-1.png" alt="">
+						<img src="./assets/cards-1.png" alt="">
 						<h5 class="ms-2 text-center text-lg-start">Santa at Night</h5>
 						<p class="ms-2 text-center text-lg-start">$25 - $ 250</p>
 						<button class="btn text-white position-absolute bottom-0 end-0" style="background-color: #B248AD;">Buy Now</button>
@@ -431,10 +431,10 @@
 					<br>
 					<p>Contact Us</p>
 					<br>
-					<img src="assets/fb.png" alt="">
-					<img src="assets/ig.png" alt="">
-					<img src="assets/pr.png" alt="">
-					<img src="assets/tw.png" alt="">
+					<img src="./assets/fb.png" alt="">
+					<img src="./assets/ig.png" alt="">
+					<img src="./assets/pr.png" alt="">
+					<img src="./assets/tw.png" alt="">
 				</div>
 			</div>
 			<div class="row">
@@ -448,7 +448,7 @@
 					<h4>Subscribe to Our Newsletter</h4>
 					<div class="position-relative d-flex">
 						<input class="form-control rounded-4 position-relative " type="search" placeholder="Enter Email Address" aria-label="Search" style="width: 58%;">
-					<img src="assets/panah.svg" alt="" class="position-absolute" style="right:240; top:6">
+					<img src="./assets/panah.svg" alt="" class="position-absolute" style="right:240; top:6">
 					</div>
 				</div>
 			</div>
